--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "jade-loader": "~0.8.0",
     "extract-text-webpack-plugin": "~1.0.1",
     "angular": "~1.5.0",
-    "es6-promise": "~3.1.2"
+    "es6-promise": "~3.1.2",
+    "tslint": "~3.5.0",
+    "tslint-loader": "~2.1.3",
+    "sass-loader": "~3.1.2"
   }
 }
