--- a/package.json
+++ b/package.json
@@ -18,27 +18,29 @@
   "author": "DealerPoint",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "jquery": "~2.2.1",
-    "webpack": "~1.12.14",
-    "html-webpack-plugin": "~2.9.0",
-    "babel-loader": "~6.2.4",
+    "angular": "~1.5.0",
     "babel-core": "~6.6.5",
+    "babel-loader": "~6.2.4",
     "babel-preset-es2015": "~6.6.0",
-    "style-loader": "~0.13.0",
     "css-loader": "~0.23.1",
-    "lodash": "~4.6.1",
-    "raw-loader": "~0.5.1",
+    "es6-promise": "~3.1.2",
+    "extract-text-webpack-plugin": "~1.0.1",
     "file-loader": "~0.8.5",
-    "url-loader": "~0.5.7",
-    "tsd": "~0.6.5",
-    "typings": "~0.6.10",
+    "html-webpack-plugin": "~2.9.0",
     "jade": "~1.11.0",
     "jade-loader": "~0.8.0",
-    "extract-text-webpack-plugin": "~1.0.1",
-    "angular": "~1.5.0",
-    "es6-promise": "~3.1.2",
+    "jquery": "~2.2.1",
+    "lodash": "~4.6.1",
+    "node-sass": "^3.4.2",
+    "raw-loader": "~0.5.1",
+    "sass-loader": "~3.1.2",
+    "style-loader": "~0.13.0",
+    "ts-loader": "^0.8.1",
+    "tsd": "~0.6.5",
     "tslint": "~3.5.0",
     "tslint-loader": "~2.1.3",
-    "sass-loader": "~3.1.2"
+    "typings": "~0.6.10",
+    "url-loader": "~0.5.7",
+    "webpack": "~1.12.14"
   }
 }
