Add guard-annotate and fix configs
This commit refs #2

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,8 +7,10 @@ AllCops:
   Exclude:
     - 'bin/**/*'
     - 'config/**/*'
-    - 'db/schema.rb'
+    - 'node_modules/**/*'
+    - 'app/frontend/**/*'
     - 'spec/*_helper.rb'
+    - 'db/schema.rb'
 
 Metrics/LineLength:
   Enabled: false
