--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "webpack --config ./config/webpack/development.js --color --progress",
     "build": "webpack --config ./config/webpack/production.js",
-    "postinstall": "typings i"
+    "postinstall": "typings i && gulp common_js && gulp uikit_js"
   },
   "repository": {
     "type": "git",
@@ -65,6 +65,7 @@
     "tslint": "~3.5.0",
     "tslint-loader": "~2.1.3",
     "typings": "~0.6.10",
+    "uikit": "^2.25.0",
     "url-loader": "~0.5.7",
     "velocity-animate": "^1.2.3",
     "waypoints": "^4.0.0",
