Add users, session & token auth

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,7 @@ Metrics/LineLength:
   Enabled: false
 Style/Documentation:
   Enabled: false
+ClassAndModuleChildren:
+  Enabled: false
+AsciiComments:
+  Enabled: false
