--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,10 @@ AllCops:
 
 Metrics/LineLength:
   Enabled: false
+Metrics/MethodLength:
+  Max: 15
+Metrics/AbcSize:
+  Max: 20
 Style/Documentation:
   Enabled: false
 ClassAndModuleChildren:
