--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:itDealerPoint/truckpoint.git"
+    "url": "git@github.com:dealer-point/trucks.git"
   },
   "author": "DealerPoint",
   "license": "BSD-2-Clause",
   "dependencies": {
     "angular": "~1.5.0",
+    "angular-animate": "~1.5.1",
+    "angular-breadcrumb": "~0.4.1",
+    "angular-retina": "~0.3.11",
+    "angular-sanitize": "~1.5.1",
+    "angular-selectize2": "^1.2.3",
+    "angular-ui-router": "~0.2.18",
     "babel-core": "~6.6.5",
     "babel-loader": "~6.2.4",
     "babel-preset-es2015": "~6.6.0",
@@ -56,9 +62,12 @@
     "moment": "^2.12.0",
     "node-sass": "^3.4.2",
     "node-waves": "^0.7.5",
+    "oclazyload": "~1.0.9",
     "raw-loader": "~0.5.1",
+    "run-sequence": "~1.1.5",
     "sass-loader": "~3.1.2",
     "screenfull": "^3.0.0",
+    "selectize": "~0.12.1",
     "style-loader": "~0.13.0",
     "ts-loader": "^0.8.1",
     "tsd": "~0.6.5",
@@ -69,14 +78,6 @@
     "url-loader": "~0.5.7",
     "velocity-animate": "^1.2.3",
     "waypoints": "^4.0.0",
-    "webpack": "~1.12.14",
-    "run-sequence": "~1.1.5",
-    "angular-sanitize": "~1.5.1",
-    "angular-animate": "~1.5.1",
-    "angular-ui-router": "~0.2.18",
-    "oclazyload": "~1.0.9",
-    "angular-retina": "~0.3.11",
-    "angular-breadcrumb": "~0.4.1",
-    "selectize": "~0.12.1"
+    "webpack": "~1.12.14"
   }
 }
