--- a/.editorconfig
+++ b/.editorconfig
@@ -7,9 +7,11 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+tab_width = 4
 
 [*.{rb,yml}]
 indent_size = 2
+tab_width = 2
 
 # tab_size: 2,
 # translate_tabs_to_spaces: true,
