--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "start": "webpack --config ./config/webpack/development.js --color --progress",
-    "build": "typings i && gulp build && webpack --config ./config/webpack/production.js",
-    "postinstall": ""
+    "build": "webpack --config ./config/webpack/production.js",
+    "postinstall": "typings i && gulp build"
   },
   "repository": {
     "type": "git",
@@ -70,7 +70,6 @@
     "selectize": "~0.12.1",
     "style-loader": "~0.13.0",
     "ts-loader": "^0.8.1",
-    "tsd": "~0.6.5",
     "tslint": "~3.5.0",
     "tslint-loader": "~2.1.3",
     "typings": "~0.6.10",
