--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jshint": "^2.9.1",
     "lodash": "~4.6.1",
     "moment": "^2.12.0",
+    "ng-dialog": "^0.6.1",
     "node-sass": "^3.4.2",
     "node-waves": "^0.7.5",
     "oclazyload": "~1.0.9",
@@ -72,7 +73,7 @@
     "ts-loader": "^0.8.1",
     "tslint": "~3.5.0",
     "tslint-loader": "~2.1.3",
-    "typings": "~0.6.10",
+    "typings": "^1.0.4",
     "uikit": "^2.25.0",
     "url-loader": "~0.5.7",
     "velocity-animate": "^1.2.3",
