--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "jquery.dotdotdot": "^1.7.4",
     "jquery.scrollbar": "^0.2.10",
     "jshint": "^2.9.1",
-    "lodash": "~4.6.1",
+    "lodash": "^4.6.1",
     "moment": "^2.12.0",
     "ng-dialog": "^0.6.1",
     "node-sass": "^3.4.2",
