--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular": "~1.5.0",
     "angular-animate": "~1.5.1",
     "angular-breadcrumb": "~0.4.1",
+    "angular-file-upload": "^2.3.3",
     "angular-retina": "~0.3.11",
     "angular-sanitize": "~1.5.1",
     "angular-selectize2": "^1.2.3",
@@ -70,6 +71,7 @@
     "screenfull": "^3.0.0",
     "selectize": "~0.12.1",
     "style-loader": "~0.13.0",
+    "textangular": "^1.5.1",
     "ts-loader": "^0.8.1",
     "tslint": "~3.5.0",
     "tslint-loader": "~2.1.3",
